<resources>

    <string name="app_name">佛陀道場</string>
    <string name="found_buddha">发现佛缘</string>
    <string name="my_buddha">我的佛缘</string>
    <string name="myinfo">个人中心</string>
    <string name="recommend">推荐</string>
    <string name="introduce">介绍</string>
    <string name="bookmall">藏经阁</string>
    <string name="map">地图</string>
    <string name="activity">活动</string>
    <string name="first_news_title">头条新闻</string>
    <string name="buddha_book">佛教书籍</string>
    <string name="buddha_activity">佛教活动</string>
    <string name="exit_tips">再按一次退出应用</string>
    <string name="login">登录</string>
    <string name="login_guest">先看看</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_sina">新浪微博登录</string>
    <string name="login_wx">微信登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="arround">周边</string>
    <string name="simiao">寺庙</string>
    <string name="bookstore">书店</string>
    <string name="sushiguan">素食馆</string>
    <string name="fojuguan">佛具馆</string>
    <string name="fuzhuang">服装</string>
    <string name="name">名称</string>
    <string name="content">内容</string>
    <string name="detail">详情</string>
    <string name="search">搜索</string>
    <string name="sel_1">附近</string>
    <string name="sel_2">类别</string>
    <string name="sel_3">智能</string>
    <string name="sel_bus">公交</string>
    <string name="sel_drive">驾车</string>
    <string name="sel_walk">步行</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="jing">经</string>
    <string name="yigui">仪轨</string>
    <string name="lun">论</string>
    <string name="modern">近代</string>
    <string name="new_show">最新上架</string>
    <string name="hot_most">热点最高</string>
    <string name="free_read">免费试读</string>
    <string name="save_shelf">保存书架</string>
    <string name="share">分享</string>
    <string name="book_mark">图书标签</string>
    <string name="book_detail">书籍详情</string>
    <string name="book_shelf">书架</string>
    
    <string name="loading">正在加载中...</string>
    <string name="parse_error">书籍解析失败</string>

    <string name="active_list">其他活动</string>
    <string name="history_list">佛教历史</string>
    <string name="thought_list">宗派思想</string>
    <string name="browse_list">艺术浏览</string>
    <string name="history_thought_list">历史及思想</string>
    <string name="artware_list">工艺品</string>
    <string name="shuhua_list">书画</string>
    <string name="intro">简介</string>
    <string name="detail_intro">详细介绍</string>
    <string name="read">阅读</string>
    <string name="chapter">章节数</string>
</resources>