<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dip" >

        <TextView
            android:id="@+id/tv_recommend"
            style="@style/tv_foundbuddha_title"
            android:text="@string/recommend" />

        <TextView
            android:id="@+id/tv_introduce"
            style="@style/tv_foundbuddha_title"
            android:text="@string/introduce" />

        <TextView
            android:id="@+id/tv_bookmall"
            style="@style/tv_foundbuddha_title"
            android:text="@string/bookmall" />

        <TextView
            android:id="@+id/tv_map"
            style="@style/tv_foundbuddha_title"
            android:text="@string/map" />

        <TextView
            android:id="@+id/tv_activity"
            style="@style/tv_foundbuddha_title"
            android:text="@string/activity" />

    </LinearLayout>
    
    <ImageView
        android:id="@+id/iv_cursor"  
        android:layout_width="35dip"  
        android:layout_height="4dip"  
        android:layout_marginLeft="15dip"
        android:scaleType="matrix"  
        android:src="@drawable/shape_curser"/>  
      
    <android.support.v4.view.ViewPager  
        android:id="@+id/viewpager"  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"  
        android:flipInterval="30"  
        android:persistentDrawingCache="animation"/> 

</LinearLayout>
